# e_commerce

./: .flake8  16.1_main.py  16.2_main.py  17.1_main.py  README.md  coverage.txt  pyproject.toml
src/: base_product.py  category.py  exceptions.py  lawngrass.py  myiter.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_lawngrass.py  test_myiter.py  test_print_mixin.py  test_product.py  test_smartphone.py
